<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.ConfirmOrderFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/dateTimeRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/txtDateTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_date"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_toEndOf="@+id/txtDateTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/order_date"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp">

                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/timeRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/txtTimeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_time"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/txtTime"
                        android:layout_toEndOf="@+id/txtTimeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/order_time"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp">

                    </TextView>

                </RelativeLayout>

            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/dark_brown"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

            </View>

            <TextView
                android:id="@+id/txtTipMessageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="3dp"
                android:textSize="11sp"
                android:textColor="@color/red"
                android:textStyle="normal"
                android:text="@string/tip_message">

            </TextView>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/dark_brown"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

            </View>

            <TextView
                android:id="@+id/txtContinueOrderingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:background="@color/dark_brown"
                android:text="@string/continue_ordering_title">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderedItemRecyclerList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:scrollbars="vertical"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/finalItemRecyclerListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:scrollbars="vertical"/>

            <ProgressBar
                android:id="@+id/schemeProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateDrawable="@xml/progress"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtGetSchemesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="10dp"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="@color/dark_brown"
                android:textStyle="normal"
                android:text="@string/get_schemes_title">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/schemeListView"
                style="@style/applicationTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"/>

            <RelativeLayout
                android:id="@+id/totalQuantityRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/txtTotalQuantityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_quantity"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/txtTotalQuantity"
                    android:layout_toEndOf="@+id/txtTotalQuantityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/totalAmountRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/txtTotalAmountTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/txtTotalAmount"
                    android:layout_toEndOf="@+id/txtTotalAmountTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp">

                </TextView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/buttonTempRelative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/btnTempBill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:text="@string/order_temp_btn"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:background="@color/dark_brown">

                </TextView>

            </RelativeLayout>

            <EditText
                android:id="@+id/edtGuestName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/guest_name"
                android:textSize="12sp"
                android:inputType="text"
                android:visibility="gone"
                android:textColor="@color/black">

            </EditText>

            <EditText
                android:id="@+id/edtGuestContactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/guest_contact_no"
                android:textSize="12sp"
                android:inputType="number"
                android:maxLength="10"
                android:visibility="gone"
                android:textColor="@color/black">

            </EditText>

            <EditText
                android:id="@+id/edtGuestAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/guest_address"
                android:visibility="gone"
                android:textSize="12sp"
                android:inputType="text"
                android:textColor="@color/black">

            </EditText>

            <RelativeLayout
                android:id="@+id/paymentModeRelative"
                android:layout_width="match_parent"
                android:layout_height="49dp">

                <RadioGroup
                    android:id="@+id/paymentModeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/paymentModeCash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:buttonTint="@color/dark_brown"
                        android:padding="5dp"
                        android:text="@string/payment_mode_cash">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/paymentModeCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:buttonTint="@color/dark_brown"
                        android:padding="5dp"
                        android:text="@string/payment_mode_card">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/paymentModeOnline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:buttonTint="@color/dark_brown"
                        android:padding="5dp"
                        android:text="@string/payment_mode_online">

                    </RadioButton>


                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/buttonRelative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/btnConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:text="@string/nav_header_confirm_order"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:background="@color/dark_brown">

                </TextView>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>